Hello
Put changelog in plain text please
Make sure to clear this after each release

Put changelog here:
-----------------
- Added a feature API to make parity between 1.19.2 and 1.19.3 easier
- Added an NBT File API for reading/writing from/to NBT files
- Wind Managers are now per-level and are savable